Add forgot password controller
